--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "async": "^2.1.2",
     "body-parser": "^1.15.2",
+    "express": "^4.14.0",
     "express-http-proxy": "^0.10.1",
     "express-jwt": "^5.1.0",
     "jsonapi-serializer": "^3.4.1",
